--- a/templates/mentors.html
+++ b/templates/mentors.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Al Noor Bootcamp</title>
+    <title>TechElevate University</title>
+    <link rel="icon" type="image/x-icon" href="/static/images/my website logo.png">
     <!-- Link to the external CSS in the css folder -->
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
@@ -69,7 +70,10 @@
     
   
   <nav class="navbar">
-    <div class="navbar-logo">Al Noor Bootcamp</div>
+    <div class="navbar-logo" style="display: flex; align-items: center; gap: 10px;">
+      <img src="/static/images/my website logo.png" alt="TechElevate University Logo" style="height: 60px; width: auto;">
+      <h3 class="navbar-title">TechElevate University</h3>
+  </div>
     <div class="nav-links">
       <a href="{{ url_for('home') }}">Home</a>
       <a href="{{ url_for('about') }}">About Us</a>
@@ -114,6 +118,11 @@
       <div></div>
     </div>
   </nav>
+
+   <!-- Loading screen container -->
+   <div id="loading-screen">
+    <div class="loader"></div>
+  </div>
 
   
 
