--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Al Noor Bootcamp</title>
+    <title>TechElevate University</title>
+    <link rel="icon" type="image/x-icon" href="/static/images/my website logo.png">
     <!-- Link to the external CSS in the css folder -->
     <link
       rel="stylesheet"
@@ -67,7 +68,12 @@
       }
     </style>
     <nav class="navbar">
-      <div class="navbar-logo">Al Noor Bootcamp</div>
+      <div class="navbar-logo" style="display: flex; align-items: center; gap: 10px;">
+        <img src="/static/images/my website logo.png" alt="TechElevate University Logo" style="height: 60px; width: auto;">
+        <h3 class="navbar-title">TechElevate University</h3>
+    </div>
+    
+    
       <div class="nav-links">
         <a href="{{ url_for('home') }}">Home</a>
         <a href="{{ url_for('about') }}">About Us</a>
@@ -146,7 +152,7 @@
       <div class="text">
         <h1>Welcome to Al Noor Bootcamp</h1>
         <a href="{{ url_for('apply') }}">
-          <button class="explore-btn">Apply Our Courses</button>
+          <button class="explore-btn">Apply Now</button>
         </a>
       </div>
     </section>
@@ -297,7 +303,7 @@
         </div>
         <!-- Footer Bottom -->
         <div class="footer-bottom">
-          <p>&copy; 2024 Al-Noor Bootcamp</p>
+          <p>&copy; 2024 TechElevate University</p>
         </div>
       </div>
     </footer>
