--- a/templates/index.html
+++ b/templates/index.html
@@ -148,7 +148,7 @@
       </div>
       <!-- Home Page -->
       <div class="text">
-        <h1>Welcome to Al Noor Bootcamp</h1>
+        <h1>Welcome to TechElevate University</h1>
         <a href="{{ url_for('apply') }}">
           <button class="explore-btn">Apply Now</button>
         </a>
@@ -222,17 +222,17 @@
           <span>&#10094;</span> <!-- Left Arrow Icon -->
         </button>
         <div class="testimonial active">
-          <img class="testimonial-photo" src="student1.jpg" alt="Student 1">
+          <img class="testimonial-photo" src="/static/images/student1.jpg" alt="Student 1">
           <blockquote>"This bootcamp changed my life!"</blockquote>
           <p>- John Doe</p>
         </div>
         <div class="testimonial">
-          <img class="testimonial-photo" src="student2.jpg" alt="Student 2">
+          <img class="testimonial-photo" src="/static/images/student2.jpg" alt="Student 2">
           <blockquote>"I landed my dream job after completing the courses."</blockquote>
           <p>- Jane Smith</p>
         </div>
         <div class="testimonial">
-          <img class="testimonial-photo" src="student3.jpg" alt="Student 3">
+          <img class="testimonial-photo" src="/static/images/student3.jpg" alt="Student 3">
           <blockquote>"The mentors were incredibly supportive."</blockquote>
           <p>- Alex Johnson</p>
         </div>
